iniciando a integração da troca de visibilidade dos desafios

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL="http://localhost:3002" #Mude para a porta de onde o Backend está sendo rodado
+NEXT_PUBLIC_API_URL="https://plataforma-de-inovacao-aberta-corporativa-production-c761.up.railway.app/api" #Mude para a porta de onde o Backend está sendo rodado
