--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "swiper": "^11.2.0",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tunnel-rat": "^0.1.2"
   },
