--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
